# embedding-api-py

./: .env  .gitignore  README.md  main.py  passages.db  pyproject.toml
app/: config.py  db.py  embed.py  models.py
static/: index.html  index.js
tests/: test2.py  test_passages.py
